k8s_for_prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amazon-ns
  labels:
    name: amazon-ns
