k8s_for_prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amazon-app-ingress
  namespace: amazon-ns
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-name: amazon-alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:889501007925:certificate/5224598f-97ce-46f5-88f2-e13ff8f28e56
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: amazon.rohandevops.co.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: amazon-app-service
                port:
                  number: 80
